# zolzak

./: README.txt  pyproject.toml
movieroot/: manage.py
movieroot/movieapp/: admin.py  http_model.py  models.py  urls.py  views.py
movieroot/movieapp/management/commands/: init_tmdb.py
movieroot/movieapp/migrations/: 0001_initial.py
movieroot/movieapp/static/css/: template-style.css
movieroot/movieapp/templates/: genre.html  index.html  login.html  recom.html  search.html  user.html
movieroot/movieroot/: asgi.py  settings.py  urls.py  wsgi.py
